Fixed margins on small layout

--- a/theme/small.css
+++ b/theme/small.css
@@ -2,9 +2,9 @@
 .post, .articles, #nav-below div, .category-archive-meta, #author-info, #comments, #site-generator { float: left; }
 #site-generator { margin: 14px auto; float: none; }
 .main img { float: left; margin-right: 14px; }
-.posts .post, .posts .articles { width: 213px; max-width: none; }
+.posts .post, .posts .articles { width: 213px; max-width: none; margin: 14px 0; padding: 0; }
 .posts .main { width: 440px; }
-.left { margin-right: 14px; }
+.posts .left { margin-right: 14px; }
 .row, .clear { clear:both; } 
 
 #logo { margin: 14px 0; float: left; }
